--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 
-.ativo {
+.botao.ativo {
     background-color: var (--botao-inativo);
     border-bottom: 4px solid var(--verde);
 }
@@ -70,6 +70,24 @@ body {
     background-color: var(--texto-fundo);
     padding: 40px;
     border-radius: 0 0 40px 40px;
+}
+.aba-conteudo.ativo {
+    display:block;
+}
+
+.aba-conteudo{
+    display: none;
+}
+
+.aba-conteudo-titulo-principal {
+    font-size: 28px;
+    text-align: center;
+}
+
+.aba-conteudo-titulo-secundario {
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px){
